# Multi-Turn-Corruption

./: combined_results.json  generate_data.py  main.py  pyproject.toml  test.py  vis.py
data/: convert.py  generate_data.py
data/clean/: code.json  humanities.json  math.json  reasoning.json  roleplay.json  stem.json  writing.json
data/old/: new_question.jsonl
experiment_logs_20250819_205611/: experiment_summary.jsonl  judge_logs_exp0.jsonl  sample_summary_exp0.jsonl
