[project]
name = "multiturn-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "langchain>=0.3.27",
    "langchain-benchmarks>=0.0.10",
    "langchain-community>=0.3.29",
    "langsmith>=0.4.19",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openai>=1.99.3",
    "pymupdf>=1.26.4",
    "rapidfuzz>=3.14.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
